[package]
name = "winipt-sys"
version = "0.1.1"
description = "raw bindings to the winipt library (for interacting with the windows intel processor tracing driver)"
repository = "https://github.com/sum-catnip/winipt-sys"
documentation = "https://docs.rs/winipt-sys/0.1.0/winipt_sys/"
license = "MIT"
authors = ["catnip <catnip@catnip.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
cc = "1.0.47"