[package]
name = "winipt-sys"
version = "0.1.1"
description = "raw bindings to the winipt library (for interacting with the windows intel processor tracing driver)"
repository = "https://github.com/sum-catnip/winipt-sys"
license = "MIT"
authors = ["catnip <catnip@catnip.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0.47"